--- a/.github/workflows/public_on_pr.yml
+++ b/.github/workflows/public_on_pr.yml
@@ -16,9 +16,13 @@ jobs:
       - name: Checkout base
         uses: actions/checkout@v4
 
-      - name: Add label 'auto-news'
-        uses: actions-ecosystem/action-add-labels@v1
+      - name: Add label 'auto-news' via REST API
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          labels: auto-news
+        run: |
+          echo "Adding label 'autonews' to PR #${{ github.event.number }}"
+          curl -s -X POST \
+            -H "Authorization: token ${GITHUB_TOKEN}" \
+            -H "Accept: application/vnd.github+json" \
+            "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.number }}/labels" \
+            -d '["autonews"]' || true
